WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98807
IndexedDB: Overflowing key generator should throw ConstraintError
https://bugs.webkit.org/show_bug.cgi?id=98807
Summary
IndexedDB: Overflowing key generator should throw ConstraintError
Joshua Bell
Reported
2012-10-09 11:41:08 PDT
IndexedDB: Overflowing key generator should throw ConstraintError
Attachments
Patch
(4.44 KB, patch)
2012-10-09 11:43 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-10-09 11:43:28 PDT
Created
attachment 167805
[details]
Patch
Joshua Bell
Comment 2
2012-10-09 11:43:48 PDT
tony@ - trivial one?
Joshua Bell
Comment 3
2012-10-09 11:45:07 PDT
W3C bug is:
https://www.w3.org/Bugs/Public/show_bug.cgi?id=18558
WebKit Review Bot
Comment 4
2012-10-09 12:25:41 PDT
Comment on
attachment 167805
[details]
Patch Clearing flags on attachment: 167805 Committed
r130794
: <
http://trac.webkit.org/changeset/130794
>
WebKit Review Bot
Comment 5
2012-10-09 12:25:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug