IndexedDB: Overflowing key generator should throw ConstraintError https://bugs.webkit.org/show_bug.cgi?id=98807

Reviewed by Tony Chang.

Source/WebCore:

After the WebKit implementation landed throwing DataError, public-webapps
consensus was that the exception thrown should be ConstraintError. Trivial
change, and we pass one more W3C test submission.

Test: storage/indexeddb/key-generator.html

* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::putInternal):

LayoutTests:

Verify that overflowing key generator throws ConstraintError.

* storage/indexeddb/key-generator-expected.txt:
* storage/indexeddb/resources/key-generator.js:


Canonical link: https://commits.webkit.org/116778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130794 268f45cc-cd09-0410-ab3c-d52691b4dbfc